--- a/index.html
+++ b/index.html
@@ -2,10 +2,138 @@
 	<head>
 		<title>PlaySolutions - Shop Design</title>
 		<meta charset="UTF-8">
-		<link rel="stylesheet" href="assets/css/design.css">
+		<meta name="viewport" content="initial-scale=1.0">
 		<link rel="icon" href="assets/img/favicon.ico">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+		<link rel="stylesheet" href="assets/css/design.css">
 	</head>
 	<body>
-		
+		<header class="container-fluid">
+			<div class="row">
+				<div class="col">
+					<a href="https://playsolutions.ro" target="_blank">
+						<img src="assets/img/logo.png" class="img-fluid">
+					</a>
+				</div>
+			</div>
+		</header>
+		<nav class="navbar navbar-expand-sm navbar-light bg-light">
+			<button class="navbar-toggler">
+				<a class="fa fa-sort-down arrow"></a>
+			</button>
+			<a class="fa fa-2x fa-sort-down arrow only-big"></a>
+			<a class="navbar-brand home only-big" href="#">Home</a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#toggler" aria-expanded="false" aria-label="Navigation">
+				<span class="fa fa-search"></span>
+			</button>
+			<button class="navbar-toggler" type="button">
+				<a class="fa fa-shopping-cart"></a>
+			</button>
+			<div class="collapse navbar-collapse" id="toggler">
+				<form class="form-inline mt-0 mt-lg-0 my-2 my-lg-0 ml-auto mr-auto">
+					<input class="form-control mr-sm-2" type="search" placeholder="Categorie...">
+					<button class="btn my-2 my-sm-0" type="submit">Caută</button>
+				</form>
+			</div>
+			<a class="btn fa fa-2x fa-shopping-cart shop only-big"></a>
+		</nav>
+		<main>
+			<div class="container-fluid items-container">
+				<div class="row">
+					<div class="item card col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
+						<img class="card-img-top" src="assets/img/favicon.ico">
+						<div class="card-body">
+							<p class="card-title">Card title</p>
+							<p class="card-text">Some  up the bulk of the card's content.</p>
+							<a href="#" class="btn btn-primary">Detalii</a>
+							<a href="#" class="btn btn-primary">Adaugă în coș</a>
+						</div>
+					</div>
+					<div class="item card col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
+						<img class="card-img-top" src="assets/img/favicon.ico">
+						<div class="card-body">
+							<p class="card-title">Card title</p>
+							<p class="card-text">Some  up the bulk of the card's content.</p>
+							<a href="#" class="btn btn-primary">Detalii</a>
+							<a href="#" class="btn btn-primary">Adaugă în coș</a>
+						</div>
+					</div>
+					<div class="item card col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
+						<img class="card-img-top" src="assets/img/favicon.ico">
+						<div class="card-body">
+							<p class="card-title">Card title</p>
+							<p class="card-text">Some  up the bulk of the card's content.</p>
+							<a href="#" class="btn btn-primary">Detalii</a>
+							<a href="#" class="btn btn-primary">Adaugă în coș</a>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="item card col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
+						<img class="card-img-top" src="assets/img/favicon.ico">
+						<div class="card-body">
+							<p class="card-title">Card title</p>
+							<p class="card-text">Some  up the bulk of the card's content.</p>
+							<a href="#" class="btn btn-primary">Detalii</a>
+							<a href="#" class="btn btn-primary">Adaugă în coș</a>
+						</div>
+					</div>
+					<div class="item card col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
+						<img class="card-img-top" src="assets/img/favicon.ico">
+						<div class="card-body">
+							<p class="card-title">Card title</p>
+							<p class="card-text">Some  up the bulk of the card's content.</p>
+							<a href="#" class="btn btn-primary">Detalii</a>
+							<a href="#" class="btn btn-primary">Adaugă în coș</a>
+						</div>
+					</div>
+					<div class="item card col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
+						<img class="card-img-top" src="assets/img/favicon.ico">
+						<div class="card-body">
+							<p class="card-title">Card title</p>
+							<p class="card-text">Some  up the bulk of the card's content.</p>
+							<a href="#" class="btn btn-primary">Detalii</a>
+							<a href="#" class="btn btn-primary">Adaugă în coș</a>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="item card col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
+						<img class="card-img-top" src="assets/img/favicon.ico">
+						<div class="card-body">
+							<p class="card-title">Card title</p>
+							<p class="card-text">Some  up the bulk of the card's content.</p>
+							<a href="#" class="btn btn-primary">Detalii</a>
+							<a href="#" class="btn btn-primary">Adaugă în coș</a>
+						</div>
+					</div>
+					<div class="item card col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
+						<img class="card-img-top" src="assets/img/favicon.ico">
+						<div class="card-body">
+							<p class="card-title">Card title</p>
+							<p class="card-text">Some  up the bulk of the card's content.</p>
+							<a href="#" class="btn btn-primary">Detalii</a>
+							<a href="#" class="btn btn-primary">Adaugă în coș</a>
+						</div>
+					</div>
+					<div class="item card col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
+						<img class="card-img-top" src="assets/img/favicon.ico">
+						<div class="card-body">
+							<p class="card-title">Card title</p>
+							<p class="card-text">Some  up the bulk of the card's content.</p>
+							<a href="#" class="btn btn-primary">Detalii</a>
+							<a href="#" class="btn btn-primary">Adaugă în coș</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</main>
+		<footer>
+		</footer>
+		<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+		<script src="assets/js/design.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 	</body>
 </html>
