--- a/index.html
+++ b/index.html
@@ -18,12 +18,23 @@
 				</div>
 			</div>
 		</header>
-		<nav class="navbar navbar-expand-sm navbar-light bg-light">
-			<button class="navbar-toggler">
+		<nav class="navbar navbar-expand-sm navbar-light bg-light bordered">
+			<div class="navbar-toggler dropdown only-small">
 				<a class="fa fa-sort-down arrow"></a>
-			</button>
+				<div class="dropdown-content">
+					<a href="#">Home</a>
+					<a href="#">Categorie</a>
+					<a href="#">Contact</a>
+				</div>
+			</div>
 			<a class="fa fa-2x fa-sort-down arrow only-big"></a>
-			<a class="navbar-brand home only-big" href="#">Home</a>
+			<div class="navbar-brand home dropdown only-big">Meniu
+				<div class="dropdown-content">
+					<a href="#">Home</a>
+					<a href="#">Categorie</a>
+					<a href="#">Contact</a>
+				</div>
+			</div>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#toggler" aria-expanded="false" aria-label="Navigation">
 				<span class="fa fa-search"></span>
 			</button>
@@ -140,7 +151,7 @@
 				</div>
 			</div>
 		</main>
-		<footer class="py-3">
+		<footer class="py-1">
 			<div class="container-fluid">
 				<div class="row">
 					<div class="col-12 col-sm-12 col-md-12">
