Implemented Admin interface

--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,11 @@
 					<input class="col-sm-12 col-md-6" type="text" id="contact-email">
 				</div>
 				<div class="row">
-					<h3 class="col-sm-12 col-md-6">Message</h3>
+					<h3 class="col-sm-12 col-md-6">Subiect</h3>
+					<input class="col-sm-12 col-md-6" type="text" id="contact-subject">
+				</div>
+				<div class="row">
+					<h3 class="col-sm-12 col-md-6">Mesaj</h3>
 					<textarea class="col-sm-12 col-md-6" style="min-height:200px;resize:none;" id="contact-message"></textarea>
 				</div>
 				<div class="row" style="padding-bottom:50px;">
