--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 			<div class="navbar-toggler dropdown only-small">
 				<a class="fa fa-sort-down arrow"></a>
 				<div class="dropdown-content">
+					<a class="admin-panel" href="./admin.php" style="display:none">Admin</a>
 					<a href="./categories.html">Categorii</a>
 					<a href="./brands.html">Brands</a>
 					<a href="./contact.html">Contact</a>
@@ -39,6 +40,7 @@
 					Meniu
 				</button>
 				<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+					<a class="dropdown-item admin-panel" href="./admin.php" style="display:none">Admin</a>
 					<a class="dropdown-item" href="./categories.html">Categories</a>
 					<a class="dropdown-item" href="./brands.html">Brands</a>
 					<a class="dropdown-item" href="./contact.html">Contact</a>
@@ -72,11 +74,6 @@
 		</nav>
 		<main>
 			<div class="container items-container">
-				<div class="row">
-					<div class="col-12">
-						<h1>Aici carusel</h1>
-					</div>
-				</div>
 				<div id="content-row" class="row"></div>
 			</div>
 		</main>
